--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                         proyecto libre y no hace parte de ninguna entidad, por lo que la
                                         información aquí mostrada debe ser tomada solo de referencia y ha sido extraída
                                         de: Decreto No. 1212 de 1990, Decreto 1091 de 1995,
-                                        Decreto 4433 de 2004, Decreto 466 de 2022, (Pendiente decreto 2023). Por lo
+                                        Decreto 4433 de 2004, Decreto 466 de 2022, Decreto 905 de 2023 y Decreto 910 de 2023. Por lo
                                         anterior, los valores reales
                                         pueden variar dependiendo de cada persona y de los datos ingresados.</p>
                                 </div>
