--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                                                     id="btnVerRetroactivo">Ver
                                                     Retroactivo</button>
                                             </div>
-                                            <div class="col-md-6 col-12" style="padding: 5px; display: none;" id="mostrarBtnPrimas1">
+                                            <div class="col-md-6 col-12" style="padding: 5px; display: none;" id="mostrarBtnPrimas">
                                                 <button class="btn btn-primary" style="width: 100%;"
                                                     id="btnVerPrimas">Ver
                                                     Primas</button>
