--- a/index.html
+++ b/index.html
@@ -647,6 +647,38 @@
                                             </tbody>
                                         </table>
                                     </div>
+                                    <div class="card-body">
+                                        <table class="table table-striped" style="border: 1px solid #b3b2b2"
+                                            id="tablaDescuentosPrimaVac">
+                                            <thead>
+                                                <tr>
+                                                    <th colspan="2" style="text-align:center">Descuentos</th>
+                                                </tr>
+                                                <tr>
+                                                    <th style="width: 60%; text-align: left">Concepto</th>
+                                                    <th style="width: 40%; text-align: center">Valor</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <div class="card-body">
+                                        <table class="table table-striped" style="border: 1px solid #b3b2b2"
+                                            id="tablaTotalPrimaVac">
+                                            <thead>
+                                                <tr>
+                                                    <th colspan="2" style="text-align:center">Total</th>
+                                                </tr>
+                                                <tr>
+                                                    <th style="width: 60%; text-align: left">Concepto</th>
+                                                    <th style="width: 40%; text-align: center">Valor</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                            </tbody>
+                                        </table>
+                                    </div>
                                 </div>
                             </div>
 
