--- a/index3.html
+++ b/index3.html
@@ -107,7 +107,7 @@
             <br />
             <section class="content">
                 <div class="container-fluid">
-                    <div class="row" id="" style="">
+                    <div class="row" id="">
                         <div class="col-md-12">
                             <div class="card card-primary">
                                 <div class="card-header" style="background: #002f62">
@@ -147,8 +147,9 @@
                                                 </tr>
                                                 <tr>
                                                     <td style="text-align: justify"><b>Caja de sueldos de retiro
-                                                            (CASUR): </b> Descuento mensual equivalente al 6% del
-                                                        salario básico</td>
+                                                            (CASUR): </b> Descuento mensual equivalente al 5% del
+                                                        salario básico, de la prima de antigüedad o de retorno a la experiencia, 
+                                                        subsidio o partida de alimentación y de la prima de actividad (Oficiales)</td>
                                                 </tr>
                                                 <tr>
                                                     <td style="text-align: justify"><b>Ahorro obligatorio CAPROVIMPO:
@@ -232,7 +233,7 @@
     <!-- AdminLTE App -->
     <script src="resources/dist/js/adminlte.js"></script>
     <script src="resources/plugins/sweetalert2/sweetalert2.all.min.js"></script>
-    <script src="CalculoValores.js?v=21"></script>
+    <script src="CalculoValores.js?v=22"></script>
     
 </body>
 
