--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                         usted perciba.</p>
                                     <p style="text-align: justify; color: red;">Tenga en cuenta que este sistema es un
                                         proyecto libre y no hace parte de ninguna entidad, por lo que la
-                                        información aquí mostrada debe ser tomada solo de referencia y ha sido extraída
+                                        información aquí mostrada debe ser tomada solo como referencia y ha sido extraída
                                         de: Decreto No. 1212 de 1990, Decreto 1091 de 1995,
                                         Decreto 4433 de 2004, Decreto 466 de 2022, Decreto 905 de 2023 y Decreto 910 de 2023. Por lo
                                         anterior, los valores reales
@@ -940,7 +940,7 @@
     <!-- AdminLTE App -->
     <script src="resources/dist/js/adminlte.js"></script>
     <script src="resources/plugins/sweetalert2/sweetalert2.all.min.js"></script>
-    <script src="CalculoValores.js?v=21"></script>
+    <script src="CalculoValores.js?v=22"></script>
 </body>
 
 </html>
