--- a/index3.html
+++ b/index3.html
@@ -170,7 +170,7 @@
                                                         demás uniformados aplicado en el retroactivo. Se calcula en base
                                                         a la siguiente fórmula:
                                                         retroactivo total (sin descuentos) dividido por cantidad de
-                                                        meses de retroactivo (4 para el mes de abril), multiplicado por
+                                                        meses de retroactivo (1 para el mes de enero), multiplicado por
                                                         10 y dividido por 30, aproximadamente
                                                         <br />
                                                         <img src="formula.png" style="height:60px" />
