--- a/index3.html
+++ b/index3.html
@@ -92,12 +92,12 @@
                                 <p>Aclaración</p>
                             </a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a href="index2.html" class="nav-link">
                                 <i class="nav-icon far fa-circle text-warning"></i>
                                 <p>Contáctenos</p>
                             </a>
-                        </li>
+                        </li>-->
                     </ul>
                 </nav>
             </div>
