--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Calcular Salario 2024</title>
+    <title>Calcular Salario 2025</title>
 
     <!-- Google Font: Source Sans Pro    -->
     <link rel="stylesheet"
@@ -85,7 +85,7 @@
             <a href="#" class="brand-link">
                 <img src="LogoPesos.png" alt="imagen de rawpixel.com - Freepic.es
                 " class="brand-image img-circle elevation-3" style="opacity: .8">
-                <span class="brand-text font-weight-light">Salario 2024</span>
+                <span class="brand-text font-weight-light">Salario 2025</span>
             </a>
             <div class="sidebar">
                 <nav class="mt-2">
@@ -103,12 +103,12 @@
                                 <p>Aclaración</p>
                             </a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a href="index2.html" class="nav-link">
                                 <i class="nav-icon far fa-circle text-warning"></i>
                                 <p>Contáctenos</p>
                             </a>
-                        </li>
+                        </li>-->
                     </ul>
                 </nav>
             </div>
@@ -129,7 +129,7 @@
                                     </h4>
                                     <p style="text-align: justify;"><b>Información importante: </b>Desde esta
                                         herramienta usted podrá calcular el
-                                        salario 2024 según el aumento
+                                        salario 2025 según el aumento
                                         que sea establecido por decreto por el gobierno nacional, así como visualizar el
                                         posible
                                         retroactivo a recibir y agregar otros descuentos o devengos adicionales que
@@ -139,8 +139,8 @@
                                         información aquí mostrada debe ser tomada solo como referencia y ha sido
                                         extraída
                                         de: Decreto No. 1212 de 1990, Decreto 1091 de 1995,
-                                        Decreto 4433 de 2004, Decreto 466 de 2023, Decreto 905 de 2024 y Decreto 910 de
-                                        2024. Por lo
+                                        Decreto 4433 de 2004, Decreto 466 de 2023, Decreto 905 de 2024, Decreto 910 de
+                                        2024 y Decreto 0615 de 2025. Por lo
                                         anterior, los valores reales
                                         pueden variar dependiendo de cada persona y de los datos ingresados.</p>
                                 </div>
@@ -154,7 +154,7 @@
                                 <div class="card-body">
                                     <div class="form-group">
                                         <label for="">Posible porcentaje de aumento</label>
-                                        <input class="form-control" id="aumento" value="0" disabled>
+                                        <input class="form-control" id="aumento" value="7" disabled>
                                     </div>
                                     <div class="form-group">
                                         <label for="">Grado</label>
@@ -381,10 +381,12 @@
                             <div class="col-md-6 col-12">
                                 <div class="card">
                                     <div class="card-body">
-                                        <span style="font-size: 24px;color: #3348fd;font-weight: 500;">¿Sugerencias?
+                                        <span style="font-size: 24px;color: #3348fd;font-weight: 500; text-align: center; width: 100%;display: block;">¿Sugerencias?
                                             &nbsp;</span>
-                                        <a class="btn btn-success" href="index2.html" id=""
-                                            style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>
+                                        <!--<a class="btn btn-success" href="index2.html" id=""
+                                            style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>-->
+                                        <a class="btn btn-circle btn-secondary" href="https://wa.me/573105678707" style="background: #1bd741; border-color: #1bd741; font-size: 18px; width:100%">WhatsApp &nbsp;&nbsp;<i class="fab fa-whatsapp"></i></a>
+
                                     </div>
                                 </div>
                             </div>
@@ -469,7 +471,7 @@
                                             </div>
                                             <div class="col-md- col-12" style="padding: 5px;">
                                                 <button class="btn btn-greenDark" style="width: 100%;"
-                                                    id="btnComparar">Comparar 2023-2024</button>
+                                                    id="btnComparar">Comparar 2024-2025</button>
                                             </div>
                                             <div class="col-md-6 col-12" style="padding: 5px;">
                                                 <button class="btn btn-primary" style="width: 100%;"
@@ -503,7 +505,7 @@
                         <div class="col-md-10 col-12 col-sm-12">
                             <div class="card card-primary">
                                 <div class="card-header" style="background: #002f62">
-                                    <h3 class="card-title">Comparación de salarios 2023 - 2024</h3>
+                                    <h3 class="card-title">Comparación de salarios 2024 - 2025</h3>
                                 </div>
                                 <div class="card">
                                     <div class="card-body" style="overflow-x: auto;">
@@ -516,8 +518,8 @@
                                                 </tr>
                                                 <tr>
                                                     <th style="width: 40%; text-align: left">Concepto</th>
-                                                    <th style="width: 20%; text-align: center">2023</th>
                                                     <th style="width: 20%; text-align: center">2024</th>
+                                                    <th style="width: 20%; text-align: center">2025</th>
                                                     <th style="width: 20%; text-align: center">Aumento</th>
                                                 </tr>
 
@@ -535,8 +537,8 @@
                                                 </tr>
                                                 <tr>
                                                     <th style="width: 40%; text-align: left">Concepto</th>
-                                                    <th style="width: 20%; text-align: center">2023</th>
                                                     <th style="width: 20%; text-align: center">2024</th>
+                                                    <th style="width: 20%; text-align: center">2025</th>
                                                     <th style="width: 20%; text-align: center">Aumento</th>
                                                 </tr>
                                             </thead>
@@ -553,8 +555,8 @@
                                                 </tr>
                                                 <tr>
                                                     <th style="width: 40%; text-align: left">Concepto</th>
-                                                    <th style="width: 20%; text-align: center">2023</th>
                                                     <th style="width: 20%; text-align: center">2024</th>
+                                                    <th style="width: 20%; text-align: center">2025</th>
                                                     <th style="width: 20%; text-align: center">Aumento</th>
                                                 </tr>
                                             </thead>
@@ -586,7 +588,7 @@
                         <div class="col-md-8 col-12">
                             <div class="card card-primary">
                                 <div class="card-header" style="background: #002f62">
-                                    <h2 class="card-title">Posible Retroactivo (2 meses)</h2>
+                                    <h2 class="card-title">Posible Retroactivo (6 meses)</h2>
                                 </div>
                                 <div class="card">
                                     <div class="card-body">
