--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                         <div class="col-md-8 col-12">
                             <div class="card card-primary">
                                 <div class="card-header" style="background: #002f62">
-                                    <h2 class="card-title">Posible salario 2025</h2>
+                                    <h2 class="card-title">Posible salario 2024</h2>
                                 </div>
                                 <div class="card">
                                     <div class="card-body">
@@ -492,11 +492,13 @@
                         <div class="col-md-8 col-12">
                             <div class="card">
                                 <div class="card-body">
-                                    <span style="font-size: 24px;color: #3348fd;font-weight: 500;">¿Sugerencias?
-                                        &nbsp;</span>
-                                    <a class="btn btn-success" href="index2.html" id=""
-                                        style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>
-                                </div>
+                                        <span style="font-size: 24px;color: #3348fd;font-weight: 500; text-align: center; width: 100%;display: block;">¿Sugerencias?
+                                            &nbsp;</span>
+                                        <!--<a class="btn btn-success" href="index2.html" id=""
+                                            style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>-->
+                                        <a class="btn btn-circle btn-secondary" href="https://wa.me/573105678707" style="background: #1bd741; border-color: #1bd741; font-size: 18px; width:100%">WhatsApp &nbsp;&nbsp;<i class="fab fa-whatsapp"></i></a>
+
+                                    </div>
                             </div>
                         </div>
                     </div>
@@ -575,11 +577,13 @@
                         <div class="col-md-10 col-12">
                             <div class="card">
                                 <div class="card-body">
-                                    <span style="font-size: 24px;color: #3348fd;font-weight: 500;">¿Sugerencias?
-                                        &nbsp;</span>
-                                    <a class="btn btn-success" href="index2.html" id=""
-                                        style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>
-                                </div>
+                                        <span style="font-size: 24px;color: #3348fd;font-weight: 500; text-align: center; width: 100%;display: block;">¿Sugerencias?
+                                            &nbsp;</span>
+                                        <!--<a class="btn btn-success" href="index2.html" id=""
+                                            style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>-->
+                                        <a class="btn btn-circle btn-secondary" href="https://wa.me/573105678707" style="background: #1bd741; border-color: #1bd741; font-size: 18px; width:100%">WhatsApp &nbsp;&nbsp;<i class="fab fa-whatsapp"></i></a>
+
+                                    </div>
                             </div>
                         </div>
                     </div>
@@ -663,11 +667,13 @@
                         <div class="col-md-8 col-12">
                             <div class="card">
                                 <div class="card-body">
-                                    <span style="font-size: 24px;color: #3348fd;font-weight: 500;">Alguna
-                                        sugerencia? &nbsp;&nbsp;</span>
-                                    <a class="btn btn-success" href="index2.html" id=""
-                                        style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>
-                                </div>
+                                        <span style="font-size: 24px;color: #3348fd;font-weight: 500; text-align: center; width: 100%;display: block;">¿Sugerencias?
+                                            &nbsp;</span>
+                                        <!--<a class="btn btn-success" href="index2.html" id=""
+                                            style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>-->
+                                        <a class="btn btn-circle btn-secondary" href="https://wa.me/573105678707" style="background: #1bd741; border-color: #1bd741; font-size: 18px; width:100%">WhatsApp &nbsp;&nbsp;<i class="fab fa-whatsapp"></i></a>
+
+                                    </div>
                             </div>
                         </div>
                     </div>
@@ -861,11 +867,13 @@
                         <div class="col-md-8 col-12">
                             <div class="card">
                                 <div class="card-body">
-                                    <span style="font-size: 24px;color: #3348fd;font-weight: 500;">Alguna
-                                        sugerencia? &nbsp;&nbsp;</span>
-                                    <a class="btn btn-success" href="index2.html" id=""
-                                        style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>
-                                </div>
+                                        <span style="font-size: 24px;color: #3348fd;font-weight: 500; text-align: center; width: 100%;display: block;">¿Sugerencias?
+                                            &nbsp;</span>
+                                        <!--<a class="btn btn-success" href="index2.html" id=""
+                                            style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>-->
+                                        <a class="btn btn-circle btn-secondary" href="https://wa.me/573105678707" style="background: #1bd741; border-color: #1bd741; font-size: 18px; width:100%">WhatsApp &nbsp;&nbsp;<i class="fab fa-whatsapp"></i></a>
+
+                                    </div>
                             </div>
                         </div>
                     </div>
@@ -989,7 +997,7 @@
     <!-- AdminLTE App -->
     <script src="resources/dist/js/adminlte.js"></script>
     <script src="resources/plugins/sweetalert2/sweetalert2.all.min.js"></script>
-    <script src="CalculoValores.js?v=23"></script>
+    <script src="CalculoValores.js?v=22"></script>
 </body>
 
 </html>
